# font-awesome-flask

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  upgrade.yml
docs/: api.md  changelog.md  conf.py  index.md  index.rst  index.rst.bak  usage.md
src/flask_font_awesome/: __init__.py
src/flask_font_awesome/data/: css_sris.json  js_sris.json
src/flask_font_awesome/templates/: font_awesome.html
template/: cookiecutter.json  local_extensions.py
template/{{ cookiecutter.__folder_name }}/flask_font_awesome/: __init__.py
template/{{ cookiecutter.__folder_name }}/flask_font_awesome/static/js/: all.min.js
